# JanNetra

./: .dockerignore  .flake8  .gitignore  .vercelignore  Dockerfile  Makefile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  readme.md  requirements-test.txt  requirements.txt  run.py  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/agents/: backend-api-agent.md  frontend-agent.md
.github/workflows/: ci.yml  lint.yml  release.yml  update_contributors.yml  validate_data.yml
alembic/: env.py
app/: __init__.py  constants.py
app/agents/: base_agent.py  politician_agent.py  state_mla_fetcher.py
app/config/: __init__.py  agent_config.py  free_tier_llm.py
app/controllers/: __init__.py  politician_controller.py
app/core/: __init__.py  cache.py  database.py  env_checker.py  exceptions.py  logger.py  slugify.py  vector_db.py
app/data/: mla.json  mp.json
app/database/: __init__.py  base.py  config.py  migration_utils.py  session.py
app/database/models/: __init__.py  user.py
app/prompts/: __init__.py  politician_prompts.py
app/routes/: __init__.py  api_routes.py  user_routes.py
app/schemas/: politician.py  questions.py  types.py
app/scrapers/: __init__.py  http.py  parsers.py  scraper.py  storage.py
app/services/: __init__.py  llm_cache.py  politician_service.py  questions_service.py  user_service.py  vector_db_service.py
app/tools/: __init__.py  web_scraper.py  web_search.py  wikipedia_tool.py
chroma_db/4219f39c-aa78-4ff9-8ed6-a632118e9703/: index_metadata.pickle
docker/: init-db.sh
docs/: free-tier-wrapper-mvp.md
frontend/: eslint.config.mjs  jest.config.js  jest.setup.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/__tests__/lib/: user.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/components/: MyPoliticianCard.tsx  MyPoliticiansSection.tsx  PoliticianCard.tsx  PoliticianCardSkeleton.tsx  PoliticianCardWrapper.tsx  PreambleSection.tsx
frontend/components/analytics/: GoogleAnalytics.tsx
frontend/data/: contributors.json
frontend/hooks/: useAnalytics.ts  useMyPoliticians.ts  useOnboardingCheck.ts  usePoliticianSearch.ts  usePoliticians.ts  useQuestions.ts
frontend/lib/: locationPincode.ts  myPoliticiansStorage.ts  politicianUtils.ts
frontend/types/: next-auth.d.ts  politician.ts
frontend/utils/: constants.ts  functions.ts
scripts/: chroma_query.py  fetch_mlas.py  generate_contributors.py  run_politician_agent.py  scrape_election.py  sync_chroma_politicians.py  validate_json.py
tests/: conftest.py  pytest.ini  test_langchain_setup.py
tests/e2e/: __init__.py  test_full_flows.py
tests/integration/: __init__.py  test_api_routes.py  test_user_routes.py
tests/unit/: __init__.py
(+30 files in other folders)
